<resources>
    <string name="app_name">E-Jeep</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="e_jeepay_out">E-JeePay Out</string>
    <string name="service">Service</string>
    <string name="cash_in">CASH IN</string>
    <string name="discount">Discount</string>
    <string name="check_seat">Check Seat</string>
    <string name="qr_code_share">QR Code Share</string>
    <string name="transaction">Transaction</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_password">Forget Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_yet">Don’t have an account yet?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="_0_00">₱0.00</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="next">Next</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name_optional">Middle Name (Optional)</string>
    <string name="first_name">First Name</string>
    <string name="services">Services</string>
    <string name="your_text_here">Your Text Here</string>
    <string name="transactions">Transactions</string>
    <string name="jeep_tracker">Jeep Tracker</string>
    <string name="note">Note:</string>
    <string name="pick_a_jeep_to_track">Pick a Jeep to track.</string>
    <string name="track_jeep">Track Jeep</string>
    <string name="my_qr">My QR</string>
    <string name="daisy_miller">Daisy Miller</string>
    <string name="mobile_no_09xxxxxxxxx">Mobile No.: 09XXXXXXXXX</string>
    <string name="username_username">Username: @username</string>
    <string name="transfer_fees_may_apply">Transfer fees may apply</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="recent_transactions">Recent Transactions:</string>
    <string name="history">History</string>
    <string name="my_profile">My Profile</string>
    <string name="account_information">Account Information</string>
    <string name="favorites">Favorites</string>
    <string name="offers">Offers</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_and_policy">Privacy and Policy</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="list_of_choices">List of choices</string>
    <string name="gcash">Gcash</string>
    <string name="paypal">Paypal</string>
    <string name="note_please_fill_out_all_required_fields">Please fill out all required fields</string>
    <string name="middle_name">Middle Name</string>
    <string name="select_gender">Select Gender</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state_province">State Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="birth_date">Birth Date</string>
    <string name="upload_student_id_senior_citizen_id_pwd_id">Upload (Student ID/Senior Citizen ID/PWD ID)</string>
    <string name="browse_files">Browse Files</string>
    <string name="submit">Submit</string>
    <string name="personal_information">Personal Information</string>
    <string name="jeep_details">Jeep Details\n</string>
    <string name="jeep_no">Jeep No.</string>
    <string name="enter_jeep_no">Enter Jeep No</string>
    <string name="capacity">Capacity</string>
    <string name="enter_capacity">Enter Capacity</string>
    <string name="availability">Availability</string>
    <string name="enter_availability">Enter Availability</string>
    <string name="create_qr_code">"create qr code "</string>
    <string name="role">Role</string>
    <string name="seat">Seat</string>
    <string name="profile">Profile</string>
    <string name="tracker">Tracker</string>
    <string name="dashboard">Dashboard</string>
    <string name="total_passenger">Total Passenger</string>
    <string name="total_income">Total Income</string>
    <string name="cash_out">Cash Out</string>
    <string name="my_conductor">My Conductor</string>
    <string name="list_of_accounts">List of Accounts</string>
    <string name="add">Add</string>
    <string name="create_account">Create account</string>
    <string name="creat_an_account">Create an Account</string>
    <string name="paymaya">PayMaya</string>
    <string name="view_more">View More</string>
    <string name="set_status">Set Status</string>
    <string name="edit_details">Edit Details</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_information">Edit Information</string>
    <string name="done">Done</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="scan_passenger_qr_code">Scan passenger QR Code</string>
    <string name="upload_qr_code">Upload QR Code</string>
    <string name="create_custom_qr_code">create Custom QR Code</string>
    <string name="type_of_passenger">Type of Passenger</string>
    <string name="regular">REGULAR</string>
    <string name="discounted">DISCOUNTED</string>
    <string name="generate">Generate</string>
    <string name="view_jeep_details">View Jeep Details</string>
    <string name="sign_in">Sign In</string>
    <string name="fare_rate">Fare Rate</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="mobile_no">Mobile No.:</string>
    <string name="_09xxxxxxxxx">09XXXXXXXXX</string>
    <string-array name="user_roles">
        <item>Passenger</item>
        <item>Conductor</item>
        <item>Driver</item>
    </string-array>


</resources>