<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


 <item android:id="@+id/nav_home"
     android:icon="@drawable/home_"
     android:title="Home"
     tools:ignore="HardcodedText" />

    <item android:id="@+id/nav_tracker"
        android:icon="@drawable/ic_tracker"
        android:title="@string/tracker"/>

    <item android:id="@+id/nav_QrCode"
        android:icon="@drawable/ic_qr_code"
        android:title="@string/my_qr"/>

    <item android:id="@+id/nav_history"
        android:icon="@drawable/ic_history_list"
        android:title="@string/history"/>

    <item android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
</menu>