<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".MyQrFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:text="@string/my_qr"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="517dp"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF" />

    <View
        android:layout_width="347dp"
        android:layout_height="492dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bacground3" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="135dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/daisy_miller"
        android:textColor="@color/black"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="190dp"
        android:gravity="center"
        android:text="@string/mobile_no"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewPhoneNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="190dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/_09xxxxxxxxx"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="220dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewUsername2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="220dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="270dp"
        android:layout_height="253dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_qr"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="87dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/transfer_fees_may_apply"
        android:textSize="14sp"
        android:textColor="#A5BE7D"
        android:layout_marginTop="530dp"
        android:layout_marginStart="105dp"/>

    <Button
        android:id="@+id/BtnQRShare"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_btn"
        android:text="@string/qr_code_share"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/round_btn"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="210dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/save"
        android:textStyle="bold"/>
</FrameLayout>