<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:padding="20dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/set_status"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_active"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_active"
        android:text="@string/active"
        android:textColor="#00712D" />

    <Button
        android:id="@+id/btn_inactive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inactive"
        android:background="@drawable/button_inactive"
        android:textColor="#FF9100"
        android:layout_marginTop="10dp" />
</LinearLayout>
