<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Edit_DetailsFragment">

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_backl"
        tools:ignore="ContentDescription" />

    <!-- Title TextView -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="30dp"
        android:text="@string/my_conductor"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <FrameLayout
        android:id="@+id/frame_conductor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <!-- Content inside the frame_conductor -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- First Name -->
            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="80dp"
                android:text="@string/edit_information"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:hint="@string/first_name"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                tools:ignore="Autofill,RtlSymmetry,TextFields" />

            <!-- Middle Name (Optional) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:hint="@string/middle_name"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                tools:ignore="Autofill,RtlSymmetry,TextFields" />

            <!-- Last Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:hint="@string/last_name"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                tools:ignore="Autofill,RtlSymmetry,TextFields" />

            <!-- Email -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                tools:ignore="Autofill,RtlSymmetry" />

            <!-- Phone Number -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                tools:ignore="Autofill,RtlSymmetry" />

            <!-- Password -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                tools:ignore="Autofill,RtlSymmetry" />
            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Save Button -->
                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_save_style"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    tools:ignore="ButtonStyle" />

                <!-- Delete Account Button -->
                <Button
                    android:id="@+id/btn_delete_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_delete_style"
                    android:text="@string/delete_account"
                    android:textColor="@color/white"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</FrameLayout>
