<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".Driver_ProfileFragment">


    <View
        android:layout_width="match_parent"
        android:layout_height="690dp"
        android:layout_marginTop="150dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/my_profile"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <!-- Account Information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:clickable="true"
        android:paddingVertical="8dp"
        tools:ignore="UseCompoundDrawables,UselessLeaf">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="55dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_account"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="234dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/account_information"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_more"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="245dp"
        android:clickable="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="6dp"
        tools:ignore="UseCompoundDrawables,UselessLeaf">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_terms"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="238dp"
            android:layout_height="43dp"
            android:gravity="center"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_more"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="305dp"
        android:clickable="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="6dp"
        tools:ignore="UseCompoundDrawables,UselessLeaf">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_privacy"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="238dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/privacy_and_policy"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_more"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingVertical="6dp"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables,UselessLeaf">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_settings"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="241dp"
            android:layout_height="43dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_more"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/round_btn3"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</FrameLayout>